position relative and z-index added to main content to avoid starry sky animation overflow

--- a/project/src/public/assets/stylesheets/components/_footer.scss
+++ b/project/src/public/assets/stylesheets/components/_footer.scss
@@ -12,6 +12,7 @@ footer {
     width: 100%;
     height: auto;
     padding: 1.2em;
+    z-index: 20;
 }
 
 
